fix: z-index stacking - intro z:0, profile z:1 to stop hero overlapping about

--- a/portfolio-master/portfolio-master/app/routes/home/intro.module.css
+++ b/portfolio-master/portfolio-master/app/routes/home/intro.module.css
@@ -5,6 +5,7 @@
   justify-content: center;
   flex-direction: column;
   position: relative;
+  z-index: 0;
 }
 
 .text {
