--- a/portfolio-master/portfolio-master/app/routes/home/profile.module.css
+++ b/portfolio-master/portfolio-master/app/routes/home/profile.module.css
@@ -7,6 +7,8 @@
   padding-bottom: 40px;
   display: flex;
   justify-content: center;
+  position: relative;
+  z-index: 1;
 
   @media (--mediaTablet) {
     padding-top: 50px;
